syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/VuThanhThien/golang-gorm-postgres/merchant/pkg/pb";

message Item {
  uint64 id = 1;
  string name = 2;
  uint64 order_id = 3;
  uint64 product_id = 4;
  uint64 variant_id = 5;
  uint64 quantity = 6;
  float price = 7;
  float total_price = 8;
}

message Order {
  uint64 id = 1;
  string order_id = 2;
  uint64 user_id = 3;
  uint64 payment_id = 4;
  string status = 5;
  float total_amount = 6;
  repeated Item items = 7;
  string placed_at = 8;
}

message Inventory {
  uint64 id = 1;
  uint64 variant_id = 2;
  uint64 quantity = 3;
}

message UpdateInventoryRequest {
  Order order = 1;
}

message GetInventoryRequest {
  uint64 id = 1;
}

service InventoryGrpc {
  rpc DeductQuantity(UpdateInventoryRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
        post: "/api/inventory/order-succeed"
        body: "*"
      };
  };
  rpc RefundQuantity(UpdateInventoryRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
        post: "/api/inventory/order-failed"
        body: "*"
      };
  }
  rpc GetInventory(GetInventoryRequest) returns (Inventory) {
    option (google.api.http) = {
        get: "/api/inventory/{id}"
      };
  }
}